remove premium events

--- a/index.html
+++ b/index.html
@@ -60,7 +60,10 @@
         </div>
       </div>
     </div>
-
+    <footer class="text-center py-3 mt-5">
+        <p class="mb-0">Version 1.0.0</p>
+    </footer>
+    
     <!-- Importation des scripts nécessaires -->
     <script src="script.js"></script>
     <script
