handle duplicated entries

--- a/index.html
+++ b/index.html
@@ -46,6 +46,17 @@
           <!-- Le message d'erreur sera inséré ici -->
         </div>
 
+        <!-- Section pour afficher les conflits -->
+        <div
+          id="conflictMessages"
+          class="alert alert-warning mt-4"
+          style="display: none"
+        >
+          <h5>Conflits détectés :</h5>
+          <ul id="conflictList"></ul>
+          <!-- Liste des conflits -->
+        </div>
+
         <!-- Espace entre les boutons de téléchargement -->
         <div class="mt-4">
           <a
@@ -73,7 +84,7 @@
       </div>
     </div>
     <footer class="text-center py-3 mt-5">
-      <p class="mb-0">Version 1.0.1</p>
+      <p class="mb-0">Version 1.0.2</p>
     </footer>
 
     <!-- Importation des scripts nécessaires -->
