add email field

--- a/index.html
+++ b/index.html
@@ -80,11 +80,18 @@
           >
             5. Télécharger le récapitulatif des événements
           </a>
+          <a
+            id="downloadLinkMailingList"
+            class="btn btn-success"
+            style="display: none"
+          >
+            6. Télécharger les mailings lists
+          </a>
         </div>
       </div>
     </div>
     <footer class="text-center py-3 mt-5">
-      <p class="mb-0">Version 1.1.0</p>
+      <p class="mb-0">Version 1.2.0</p>
     </footer>
 
     <!-- Importation des scripts nécessaires -->
