--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
           </a>
           <a
             id="downloadLinkEventRecap"
-            class="btn btn-success"
+            class="btn btn-success mb-2"
             style="display: none"
           >
             5. Télécharger le récapitulatif des événements
@@ -91,7 +91,7 @@
       </div>
     </div>
     <footer class="text-center py-3 mt-5">
-      <p class="mb-0">Version 1.2.0</p>
+      <p class="mb-0">Version 1.2.1</p>
     </footer>
 
     <!-- Importation des scripts nécessaires -->
